Index.html modified

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 </head>
 
 <body>
-    <app-root></app-root>
+    <app-root translate="no"></app-root>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
